--- a/PC/css/new/orderandpay.css
+++ b/PC/css/new/orderandpay.css
@@ -362,6 +362,8 @@
 .orderandpay .point_go_wrap .table_wrap.type_1 .point_txt {vertical-align: middle; margin-top: 14px; display: block; margin-left: 10px; float: left;}
 .orderandpay .point_go_wrap .btn_wrap {margin: 0px auto 0 auto;border-top:1px #eee solid;text-align: center;padding-top: 20px;}
 
+.orderandpay .sub_contents {margin-top:52px;}
+
 
 /*----- cs css all Modified - 고객센터 css 폰트종류 폰트사이즈 등등 수정 -----*/
 /*------------ 고객센터 -------------*/
@@ -375,11 +377,13 @@
 .orderandpay .lnb > ul > li > .depth2 > li.active > a {color :#ff6600;}
 
 /* title */
-.orderandpay .page_location {background: none;  padding-top:20px;}
-.orderandpay .page_location .title {float:left;font-size: 40px; font-weight:700; line-height: normal;}
+.orderandpay .page_location {background: none;padding-top: 52px; margin-bottom: 13px;}
+.orderandpay .page_location .title {float:left;font-size: 24px; font-weight:700; line-height: normal;}
 .orderandpay .page_location .title a {display: block;}
 
-.orderandpay h3.page_title {font-size: 28px;font-weight: 700;margin-bottom: 15px; min-height:auto; margin-top:0;}  
+.orderandpay h3.page_title {font-size: 24px;font-weight: 700;margin-bottom: 15px; min-height:auto; margin-top:0;}  
+.orderandpay h3.page_title.border {border-bottom: 2px #000000 solid; margin-bottom: 26px; padding-bottom: 34px;}
+
 .orderandpay .tit01 {font-size: 18px; color: #000; font-weight:500; line-height: normal; min-height:auto; margin-bottom:20px; margin-top:60px;}
 .orderandpay h4.tit01 {font-size:20px; font-weight:700; color:#000; margin-bottom: 10px;}
 .orderandpay .page_stitle a { font-size: 22px; line-height: 1.4; margin-bottom: 0px; letter-spacing: -1px; font-weight: 700; color:#000;}
@@ -506,15 +510,15 @@
 .orderandpay .info_box .agree {border:0 none; background: none;}
 
 /* search */
-.orderandpay .search_box02 {padding:40px 10px;text-align:center;border: 0 none;background:#f5f5f1;}
-.orderandpay .search_box02 .stit {font-size: 24px; font-weight: 700; vertical-align: middle;}
-.orderandpay .search_box02 .text_box {position:relative;display:inline-block;width: 420px;height: auto;padding: 5px 45px 5px 10px;vertical-align: middle;background: #fff;border-radius: 0;border: 2px #000 solid;}
+.orderandpay .search_box02 {padding:40px 10px;text-align:center;border: 0 none;background:#f5f5f1;position: relative;}
+.orderandpay .search_box02 .stit {font-size: 0;font-weight: 700;vertical-align: middle;}
+.orderandpay .search_box02 .text_box {position:relative;display:inline-block;width: 584px;height: auto;padding: 5px 45px 5px 10px;vertical-align: middle;background: #fff;border-radius: 0;border: 2px #000 solid;}
 .orderandpay .search_box02 .text_box input[type="text"] {width:100%;height: 36px;color:#000;font-size: 16px;border:0;background: #fff;outline:none;}
 .orderandpay .search_box02 .text_box .search_btn {position:absolute;top: 50%;margin-top: -15px;right: 10px;display:inline-block;width: 33px;height: 29px;background:url(../../images/new/icon_cs_search.png) no-repeat 50% 50%;}
 .orderandpay .search_box02 .text_box .search_btn span {display:inline-block;visibility:hidden;font-size:0;line-height:0}
 .orderandpay .search_box02 .text_box .exm_txt {position:absolute;top: 50%;margin-top: -15px;left: 10px;color: #BDBDBD;font-size: 14px;line-height:30px;}
 
-.orderandpay .search_box02 .wordlist {height:auto; line-height: normal;}
+.orderandpay .search_box02 .wordlist {height:auto;line-height: normal;text-align: left;margin-left: 31px;}
 .orderandpay .search_box02 .wordlist .usualword	{color:#777;font-weight: 400;position: relative;padding-right: 10px;margin-right: -4px;}
 .orderandpay .search_box02 .wordlist .usualword:after {content: '';display: block;width:1px;height:16px;background: #707070;position: absolute;top: 3px;right: 0;}
 .orderandpay .search_box02 .wordlist a {color:#000000; margin-left:15px;}
