--- a/PC/css/new/orderandpay.css
+++ b/PC/css/new/orderandpay.css
@@ -362,7 +362,7 @@
 .orderandpay .point_go_wrap .table_wrap.type_1 .point_txt {vertical-align: middle; margin-top: 14px; display: block; margin-left: 10px; float: left;}
 .orderandpay .point_go_wrap .btn_wrap {margin: 0px auto 0 auto;border-top:1px #eee solid;text-align: center;padding-top: 20px;}
 
-.orderandpay .sub_contents {margin-top:52px;}
+.orderandpay .sub_contents {margin-top:56px;}
 
 
 /*----- cs css all Modified - 고객센터 css 폰트종류 폰트사이즈 등등 수정 -----*/
@@ -427,14 +427,16 @@
 .orderandpay .table02 input[type=checkbox] {vertical-align:middle}
 .orderandpay .table02 input[type=checkbox] + * {position:relative;top:1px;}*/
 
+
+/* 고객센터_통합멤버십 회원 등급 및 혜택안내 table */
 .orderandpay .table03 thead th {padding:20px 0 21px; line-height:initial;font-size: 13px;font-weight: 500; background: #FAFAFA; border: 1px solid #EEEEEE; color:#000;}
 .orderandpay .table03 thead th.defalut { background: #FAFAFA;}
-.orderandpay .table03 thead th.friends { background: #E9E8E8;}
-.orderandpay .table03 thead th.silver { background: #DEDEDE;}
-.orderandpay .table03 thead th.gold { background: #DBC19E;}
-.orderandpay .table03 thead th.platinum { background: #E1B995;}
+.orderandpay .table03 thead th.friends { background: #E9E8E8; border-left:1px #E9E8E8 solid;}
+.orderandpay .table03 thead th.silver { background: #DEDEDE;border-left:1px #DEDEDE solid;}
+.orderandpay .table03 thead th.gold { background: #DBC19E;border-left:1px #DBC19E solid;}
+.orderandpay .table03 thead th.platinum { background: #E1B995;border-left:1px #E1B995 solid;}
 .orderandpay .table03 tbody th,
-.orderandpay .table03 tbody td {height: 41px;padding: 15px 8px;font-size: 12px;font-weight:300;line-height: 1.4;border: 1px solid #EEEEEE;color:#000;/* min-height: 65px; */}
+.orderandpay .table03 tbody td {height: 41px;padding: 15px 8px;font-size: 12px;font-weight:400;line-height: 1.4;border: 1px solid #EEEEEE;color:#000;/* min-height: 65px; */}
 .orderandpay .table03 tbody th {font-weight: 400;}
 .orderandpay .table03.fz13 tbody td {font-size: 13px; font-weight: 400;}
 .orderandpay label.t01 { margin-left: 5px;}
@@ -487,15 +489,16 @@
 .orderandpay .txt_tip .stxt {margin-top:5px;}
 .orderandpay .stxt_tip {font-size: 14px; line-height: 1.4em; font-weight: 300; color:#777777;}
 
-.orderandpay .infobox01 {margin-top:45px; background:#fafafa;}
+.orderandpay .infobox01 {margin-top:45px;background: none;}
 .orderandpay .infobox01 .f_left, 
 .orderandpay .infobox01 .f_right {width:auto; float: none !important;} 
 .orderandpay .infobox01 .f_right {margin-top:30px;}
 .orderandpay .infobox01 .con {margin-top:15px;padding-left:8px;}
 .orderandpay .infobox01 dl {line-height:18px;}
-.orderandpay .infobox01 dl dt {font-size: 16px;font-weight: 500;margin-bottom: 6px; background: none; padding-left:0;  margin-top: 30px; color:#000000;}
+.orderandpay .infobox01 dl dt {font-size: 18px;font-weight: 700;margin-bottom: 6px;background: none;padding-left:0;margin-top: 30px;color:#000000;float: left;margin-left: 20px;}
 .orderandpay .infobox01 dl dt:first-child {margin-top:0;}
-.orderandpay .infobox01 dl dd { font-size: 13px; font-weight: 400; line-height: 1.7; word-break: keep-all; color:#777;}
+.orderandpay .infobox01 dl dd {font-size: 13px;font-weight: 400;line-height: 1.7;word-break: keep-all;color:#777;/* float: left; */margin-left: 240px;padding-right: 20px;padding-left: 0;}
+.orderandpay .infobox01 dl dd:after {content: ''; display: block; clear: both;}
 .orderandpay .infobox01.type2 {position:relative;margin-top:-1px;border:1px solid #dbdbdb;}
 
 .orderandpay .sv_carving {padding-top:10px;}
