--- a/MOBILE/css/new/orderandpay.css
+++ b/MOBILE/css/new/orderandpay.css
@@ -373,15 +373,15 @@
 .orderandpay .deposit_wrap .icon_question {margin-top:-1px;}
 
 /* 레이어 팝업 */
-.orderandpay .tooltip_wrap {display:block;background: #fff;margin: 20px;z-index: 1;border-radius: 24px;}
-.orderandpay .tooltip_wrap .tooltip_inner:before {content:'';display: block;width:28px;height: 28px;background: #DA2128 url(../../images/new/layer_icon_question.png) no-repeat top 5px left 8px;background-size: 13px 23px;border-radius: 28px;top: -14px;position: absolute;left: 50%;margin-left: -14px;}
-.orderandpay .tooltip_wrap .tooltip_tit {font-size: 16px;font-weight: 700;padding-bottom: 10px;text-align: center;}
-
+.orderandpay .tooltip_wrap {display:block;background: #fff;z-index: 1;border-radius: 24px; padding:20px;}
+.orderandpay .tooltip_wrap .tooltip_tit {font-size: 13px;font-weight: 700;padding-bottom: 10px;text-align: center;}
 .orderandpay .tooltip_wrap .tooltip_list li,
 .orderandpay .tooltip_wrap .tooltip_inner .texts {font-size: 10px;font-weight: 400;}
 .orderandpay .tooltip_wrap .tooltip_list li {position: relative;padding-left: 5px;}
 .orderandpay .tooltip_wrap .tooltip_list li:before {content: '';display: block;width: 2px;height:2px;background: #000;position: absolute;top: 7px;left:0;}
 .orderandpay .tooltip_wrap .tooltip_inner .texts {line-height: 1.5em; margin-top: 10px;}
+.orderandpay.positionTop .btn_cls {width:17px; height:17px; font-size: 0; padding:10px; position:absolute; top: 12px;right: 2px; background:url(../../images/new/layer_cs_icon_close.png) no-repeat center center;background-size:17px 17px;}
+
 
 .orderandpay .deposit_wrap .tooltip_wrap {display:none; position: absolute;top: -30px;left: 17px;}
 
